--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <body>
             <center>    
                 <div class = "main-body">
+                    <div class = "sub-title">
+                        Coming soon...
+                    </div>
                     <div class = "title">
                         EcoHacks 2020
                     </div>
