--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <br />
                     <a href = "mailto:rethink@uw.edu"><button type="button" class="btn btn-style">Contact Us</button></a>
-                    <a href = "http://www.bit.ly/ecohacksregistrationwait"><button type="button" class="btn-style btn">Stay Connected</button></a>
+                    <a href = "http://www.bit.ly/ecohacksnewsletter"><button type="button" class="btn-style btn">Stay Connected</button></a>
                     <br />
                     <br />
                 </div>   
